--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "BDDPDM_MobileApp",
-  "displayName": "BDDPDM_MobileApp"
+  "name": "bddpdm_mobile_app",
+  "displayName": "bddpdm_mobile_app"
 }
