--- a/ios/bddpdm_mobile_app.xcodeproj/xcshareddata/xcschemes/bddpdm_mobile_app.xcscheme
+++ b/ios/bddpdm_mobile_app.xcodeproj/xcshareddata/xcschemes/bddpdm_mobile_app.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "BDDPDM_MobileApp.app"
-               BlueprintName = "BDDPDM_MobileApp"
-               ReferencedContainer = "container:BDDPDM_MobileApp.xcodeproj">
+               BuildableName = "bddpdm_mobile_app.app"
+               BlueprintName = "bddpdm_mobile_app"
+               ReferencedContainer = "container:bddpdm_mobile_app.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "BDDPDM_MobileAppTests.xctest"
-               BlueprintName = "BDDPDM_MobileAppTests"
-               ReferencedContainer = "container:BDDPDM_MobileApp.xcodeproj">
+               BuildableName = "bddpdm_mobile_appTests.xctest"
+               BlueprintName = "bddpdm_mobile_appTests"
+               ReferencedContainer = "container:bddpdm_mobile_app.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "BDDPDM_MobileApp.app"
-            BlueprintName = "BDDPDM_MobileApp"
-            ReferencedContainer = "container:BDDPDM_MobileApp.xcodeproj">
+            BuildableName = "bddpdm_mobile_app.app"
+            BlueprintName = "bddpdm_mobile_app"
+            ReferencedContainer = "container:bddpdm_mobile_app.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "BDDPDM_MobileApp.app"
-            BlueprintName = "BDDPDM_MobileApp"
-            ReferencedContainer = "container:BDDPDM_MobileApp.xcodeproj">
+            BuildableName = "bddpdm_mobile_app.app"
+            BlueprintName = "bddpdm_mobile_app"
+            ReferencedContainer = "container:bddpdm_mobile_app.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
