--- a/ios/bddpdm_mobile_app/Info.plist
+++ b/ios/bddpdm_mobile_app/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>BDDPDM_MobileApp</string>
+	<string>bddpdm_mobile_app</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
