--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -159,6 +159,8 @@ android {
                 }
             }
         }
+        // react-native-qrcode-scanner
+        missingDimensionStrategy 'react-native-camera', 'general'
     }
 
     if (isNewArchitectureEnabled()) {
@@ -277,6 +279,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation project(':react-native-camera')
 }
 
 if (isNewArchitectureEnabled()) {
