--- a/ios/Podfile
+++ b/ios/Podfile
@@ -41,3 +41,6 @@ target 'bddpdm_mobile_app' do
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
+
+permissions_path = '../node_modules/react-native-permissions/ios'
+pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
