--- a/ios/bddpdm_mobile_app/Info.plist
+++ b/ios/bddpdm_mobile_app/Info.plist
@@ -51,5 +51,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>Scanner un médicament nécessite l'accès à votre caméra</string>
 </dict>
 </plist>
