--- a/package.json
+++ b/package.json
@@ -7,12 +7,21 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "deprecated-react-native-prop-types": "^2.3.0",
+    "patch-package": "^6.5.0",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-paper": "^5.0.0-rc.8",
+    "react-native-permissions": "^3.6.1",
+    "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
