--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "axios": "^0.27.2",
     "deprecated-react-native-prop-types": "^2.3.0",
     "patch-package": "^6.5.0",
     "react": "18.1.0",
